@@ -21,7 +21,7 @@
  * @author Anthony Campbell (anthonycampbell.co.uk)
  */
 grailsHome = Ant.antProject.properties."environment.GRAILS_HOME"
-includeTargets << grailsScript( "Init" )
+includeTargets << grailsScript( "_GrailsInit" )
 
 // Override default to run load-skin instead of init
 setDefaultTarget("loadSkin")
@@ -30,7 +30,7 @@ target (loadSkin: "Installs a skin from the plugin skin directory") {
     depends(init, parseArguments)
 
     // Get plug-in version number
-    def version = metadata["plugins.skin-loader"]
+    final def version = metadata["plugins.skin-loader"]
     if (!version) {
         version = metadata?.getApplicationVersion()
     }
@@ -90,7 +90,7 @@ target (loadSkin: "Installs a skin from the plugin skin directory") {
     println "Skin directory: ${skinDir}\n\n"
     
     // Establish initial variables
-    sources = [ conf: "${skinDir}/conf",
+    skinSources = [ conf: "${skinDir}/conf",
                 scaffolding: "${skinDir}/scaffolding",
                 layouts: "${skinDir}/layouts",
                 taglib: "${skinDir}/taglib",
@@ -103,7 +103,7 @@ target (loadSkin: "Installs a skin from the plugin skin directory") {
                 services: "${skinDir}/services",
                 utils: "${skinDir}/utils",
                 integration: "${skinDir}/test/integration" ]
-    targets = [ conf: "${basedir}/grails-app/conf",
+    baseSources = [ conf: "${basedir}/grails-app/conf",
                 scaffolding: "${basedir}/src/templates/scaffolding",
                 layouts: "${basedir}/grails-app/views/layouts",
                 taglib: "${basedir}/grails-app/taglib",
@@ -117,40 +117,42 @@ target (loadSkin: "Installs a skin from the plugin skin directory") {
                 utils: "${basedir}/grails-app/utils",
                 integration: "${basedir}/test/integration" ]
     clearTargets = [ 'scaffolding', 'layouts', 'css', 'images', 'js' ]
-    sourceFiles = [ index: "${skinDir}/index.gsp" ]
-    targetFiles = [ index: "${basedir}/grails-app/views/index.gsp" ]
+    skinSourceFiles = [ index: "${skinDir}/index.gsp" ]
+    baseSourceFiles = [ index: "${basedir}/grails-app/views/index.gsp" ]
     
     // Prompt the user if any overwrites will occur before starting copy
     println "Checking for pre-existing files..."
-    sources.each { sourceType, sourcePath ->
+    skinSources.each { sourceType, sourcePath ->
         sourceDir = new File(sourcePath)
         if (sourceDir?.exists()) {
-            targetPath = targets[sourceType]
+            targetPath = baseSources[sourceType]
             targetDir = new File(targetPath)
 
             if (clearTargets?.contains(sourceType)) {
                 // Prompt the user if the existing dir will be blown away.
                 if (targetDir?.exists()) {
                     println "Warning: Directory ${targetPath} already exists and would be completely erased."
-                            Ant.input(addProperty: "skin.dir.${sourceType}.delete",
-                                    message: "Delete existing ${sourceType}? ",
-                            validArgs: "y,n")
+                    
+                    Ant.input(addProperty: "skin.dir.${sourceType}.delete",
+                        message: "Delete existing ${sourceType}? ", validArgs: "y,n")
                 }
             } else if (targetDir?.exists()) {
                 // Prompt the user if an overwrite will occur
-                def sources = sourceDir?.list()?.toList()
-                def targets = targetDir?.list()?.toList()
-                def overlap = sources?.intersect(targets)
+                final def sources = sourceDir?.list()?.toList()
+                final def targets = targetDir?.list()?.toList()
+                final def overlap = sources?.intersect(targets)
 
                 if (!overlap?.empty) {
                     println "Warning: Pre-existing files found in ${targetDir}"
+                    
                     def hasNewer = false
                     def hasOlder = false
                     def hasDir = false
                     overlap.each { f ->
-                            def overlapTarget = new File(targetDir, f)
-                            def isDir = overlapTarget.directory
-                            print "Warning: ${isDir ? 'Directory' : 'File' } ${f} exists already"
+                        def overlapTarget = new File(targetDir, f)
+                        def isDir = overlapTarget.directory
+                        print "Warning: ${isDir ? 'Directory' : 'File' } ${f} exists already"
+
                         if (overlapTarget.lastModified() <= new File(sourceDir, f).lastModified()) {
                             println " and would be overwritten."
                             hasOlder = true
@@ -158,73 +160,71 @@ target (loadSkin: "Installs a skin from the plugin skin directory") {
                             println " and is newer than source."
                             hasNewer = true
                         }
-                            hasDir |= isDir
+
+                        hasDir |= isDir
                     }
 
                     if (hasOlder || hasDir) {
-                                    Ant.input(addProperty: "skin.dir.${sourceType}.copy",
-                                            message: "Copy on top of existing ${sourceType}? ",
-                                    validArgs: "y,n")
+                        Ant.input(addProperty: "skin.dir.${sourceType}.copy",
+                            message: "Copy on top of existing ${sourceType}? ", validArgs: "y,n")
                     }
 
                     if (Ant.antProject.properties."skin.dir.${sourceType}.copy" != "n" && hasNewer) {
-                                    Ant.input(addProperty: "skin.dir.${sourceType}.overwrite",
-                                            message: "Overwrite files in existing ${sourceType} even if newer? ",
-                                    validArgs: "y,n")
+                        Ant.input(addProperty: "skin.dir.${sourceType}.overwrite",
+                            message: "Overwrite files in existing ${sourceType} even if newer? ",
+                            validArgs: "y,n")
                     }
                 }
             }
         }
     }
 
-    sourceFiles.each { sourceType, sourcePath ->
+    skinSourceFiles.each { sourceType, sourcePath ->
         sourceFile = new File(sourcePath)
         if (sourceFile?.exists()) {
-            targetPath = targetFiles[sourceType]
+            targetPath = baseSourceFiles[sourceType]
             targetFile = new File(targetPath)
 
             // Prompt the user if an overwrite will occur
             if (targetFile?.exists()) {
                 print "Warning: File ${targetPath} exists already"
+                
                 if (targetFile.lastModified() <= sourceFile.lastModified()) {
                     println " and would be overwritten."
-                                Ant.input(addProperty: "skin.file.${sourceType}.copy",
-                                        message: "Overwrite existing ${sourceType}? ",
-                                        validArgs: "y,n")
+                    
+                    Ant.input(addProperty: "skin.file.${sourceType}.copy",
+                        message: "Overwrite existing ${sourceType}? ", validArgs: "y,n")
                 } else {
                     println " and is newer than source file."
-                                Ant.input(addProperty: "skin.file.${sourceType}.overwrite",
-                                message: "Overwrite existing ${sourceType} even if newer? ",
-                                validArgs: "y,n")
+                    
+                    Ant.input(addProperty: "skin.file.${sourceType}.overwrite",
+                        message: "Overwrite existing ${sourceType} even if newer? ", validArgs: "y,n")
                 }
             }
         }
     }
 
     def doCopy = false
-    sources.each { sourceType, sourcePath ->
+    skinSources.each { sourceType, sourcePath ->
         sourceDir = new File(sourcePath)
-        if (sourceDir.exists() &&
-            (Ant.antProject.properties."skin.dir.${sourceType}.copy" != "n")) {
+        if (sourceDir.exists() && (Ant.antProject.properties."skin.dir.${sourceType}.copy" != "n")) {
             doCopy = true
         }
     }
 
-    sourceFiles.each { sourceType, sourcePath ->
+    skinSourceFiles.each { sourceType, sourcePath ->
         sourceFile = new File(sourcePath)
-        if (sourceFile.exists() &&
-            (Ant.antProject.properties."skin.file.${sourceType}.copy" != "n")) {
+        if (sourceFile.exists() && (Ant.antProject.properties."skin.file.${sourceType}.copy" != "n")) {
             doCopy = true
         }
     }
 
     if (doCopy) {
-        sources.each { sourceType, sourcePath ->
+        skinSources.each { sourceType, sourcePath ->
             sourceDir = new File(sourcePath)
-            if (sourceDir.exists() &&
-                (Ant.antProject.properties."skin.dir.${sourceType}.copy" != "n")) {
+            if (sourceDir.exists() && (Ant.antProject.properties."skin.dir.${sourceType}.copy" != "n")) {
 
-                targetPath = targets[sourceType]
+                targetPath = baseSources[sourceType]
                 if (Ant.antProject.properties."skin.dir.${sourceType}.delete" == "y") {
                     println "Removing existing ${sourceType}..."
                     Ant.delete(dir: targetPath)
@@ -249,16 +249,16 @@ target (loadSkin: "Installs a skin from the plugin skin directory") {
             }
         }
 
-        sourceFiles.each { sourceType, sourcePath ->
+        skinSourceFiles.each { sourceType, sourcePath ->
             sourceFile = new File(sourcePath)
             if (sourceFile?.exists() &&
-                (Ant.antProject.properties."skin.file.${sourceType}.copy" != "n")) {
-
+                    (Ant.antProject.properties."skin.file.${sourceType}.copy" != "n")) {
                 overwrite = false
-                targetPath = targetFiles[sourceType]
+                targetPath = baseSourceFiles[sourceType]
+                
                 if (Ant.antProject.properties."skin.file.${sourceType}.overwrite" != "n")
                     overwrite = true
-
+                    
                 if (overwrite) {
                     println "Installing skin '${skin}' ${sourceType}..."
                 } else {
