@@ -1,7 +1,7 @@
 VERSION: 1.0.7
 
 Potential improvements:
-- Script update recommended by Peter Ledbrook for GRAILS-6239.
+- TextTagLibrary refactor.
 
 Release notes for 1.0.7 (TBA)
 - Footer output update.
@@ -12,6 +12,7 @@ Release notes for 1.0.7 (TBA)
 - Add messageSource to controller template for validate method.
 - Validate method add more ?. null handlers.
 - Switch to jQuery 1.4.2.
+- Script update recommended by Peter Ledbrook for GRAILS-6239.
 
 Release notes for 1.0.6 (31th May, 2010).
 - Grails 1.3.1 upgrade.
